<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="manual_mode"
        android:summary="@string/pref_description_manual_mode"
        android:title="@string/pref_title_manual_mode" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="test_mode"
        android:summary="@string/pref_description_test_mode"
        android:title="@string/pref_title_test_mode" />

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="packmule_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
    <EditTextPreference
        android:id="@+id/speed"
        android:defaultValue="@string/pref_default_speed"
        android:digits="1,2,3,4,5"
        android:inputType="number"
        android:key="speed_scale"
        android:maxLength="1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_speed" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_example_list_titles"
        android:entryValues="@array/pref_example_list_values"
        android:key="example_list"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_add_friends_to_messages" />-->

</PreferenceScreen>
